fix(task3_html+css+bem): add z-index and background for desktop fixed navigation

--- a/Task3/common.blocks/main-navigation/main-navigation.css
+++ b/Task3/common.blocks/main-navigation/main-navigation.css
@@ -5,6 +5,7 @@
     text-transform: uppercase;
     font-size: 0.8rem;
     padding-top: 42px;
+    z-index: 3;
 }
 
 .main-navigation__menu {
@@ -19,6 +20,7 @@
     /* text-align: left; */
     text-decoration: none;
     margin: 0 31px 0 0;
+    background-color: #f0e2d7;
 }
 
 .main-navigation__item:hover {
